--- a/style.css
+++ b/style.css
@@ -16,12 +16,12 @@ h1, h2, h3, h4, h5, h6{
     
 }
 .keyboard-bg{
-  background: url("/images/hackathon-kbd.jpg") no-repeat fixed center;
+  background: url("/Images/hackathon-kbd.jpg") no-repeat fixed center;
   background-size: cover;
 }
 
 .contact{
-  background: url("/images/get-in-touch.jpg") no-repeat bottom;
+  background: url("/Images/get-in-touch.jpg") no-repeat bottom;
   background-size: cover;
 }
 
