WIP: re-organization

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,7 @@ h1, h2, h3, h4, h5, h6{
     
 }
 .keyboard-bg{
-  background: url("/Images/hackathon-kbd.jpg") no-repeat fixed center;
+  background: url("./Images/hackathon-kbd.jpg") no-repeat fixed center;
   background-size: cover;
 }
 /* 
