--- a/src/styles.css
+++ b/src/styles.css
@@ -1,23 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Rubik:wght@400;500;700&display=swap');
 
-*{
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-}
-h1, h2, h3, h4, h5, h6{
-    font-family: 'Rubik', sans-serif;
-    font-weight: 700;
-    
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html {
+    scroll-behavior: smooth;
 }
 
-.rubik-700{
-    font-family: 'Rubik', sans-serif;
-    font-weight: 500;
-    
+* {
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
 }
-.keyboard-bg{
-  background: url("./Images/hackathon-kbd.jpg") no-repeat fixed center;
-  background-size: cover;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Rubik", sans-serif;
+    font-weight: 700;
+}
+
+.rubik-700 {
+    font-family: "Rubik", sans-serif;
+    font-weight: 500;
+}
+.keyboard-bg {
+    background: url("./Images/hackathon-kbd.jpg") no-repeat fixed center;
+    background-size: cover;
 }
 /* 
 .contact{
@@ -26,33 +37,33 @@ h1, h2, h3, h4, h5, h6{
 } */
 
 .swiper {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  /* background: #fff; */
+    text-align: center;
+    font-size: 18px;
+    /* background: #fff; */
 
-  /* Center slide text vertically */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
 }
 
 .swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
